--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
-language: php
-php:
-  - hhvm-3.18
-  - hhvm-3.21
-  - hhvm-3.24
-  - hhvm-nightly
+language: hack
+hhvm:
+  - 3.24
+  - nightly
 script:
   hhvm --version
