Revert "lets see if language = hack exists"
This reverts commit b82ed6d3de95c273e91b08f741304df7e6a0e887.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
-language: hack
-hhvm:
-  - 3.24
-  - nightly
+language: php
+php:
+  - hhvm-3.18
+  - hhvm-3.21
+  - hhvm-3.24
+  - hhvm-nightly
 script:
   hhvm --version
