--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ php:
   - hhvm-3.18
   - hhvm-3.21
   - hhvm-3.24
+  - hhvm
   - hhvm-nightly
 script:
-  hhvm --version
+  hhvm testa.php
+  hhvm testb.php
+  php testa.php
+  php testb.php
